@@ -1,5 +1,7 @@
 MNEMOSYNE 0.9.3:
 
+- added locking mechanism which warns you if you start a second
+  instance of the program, which could lead to data loss.
 - fixed obscure button labelling bug (patch by J. David Lee)
 
 MNEMOSYNE 0.9.2: 2006-03-25
